# middlewares/userAuth.js
@@ -2,11 +2,15 @@ const { Users } = require("../models");
 const { verifyToken } = require('../utils/jwt')
 
 const userAuth = async (req, res, next) => {
-  let token = req.header("authorization");
-  if (!token) {
-    return res.status(404).json({ message: "UnAuthorized user" });
+  const authHeader = req.headers.authorization;
+
+  let token;
+
+  if (authHeader?.startsWith("Bearer ")) {
+    token = authHeader.split(" ")[1];
+  } else {
+    token = authHeader;
   }
-  token = token.split(" ")[1];
   const varify = verifyToken(token);
   if (!varify) {
     return res.status(404).json({ message: "UnAuthorized user" });
