# swagger-output.json
@@ -1,265 +1,24 @@
-
-# User-Routes
-
-/api/user
-      /login
-      /sign-up
-      /get-user
-
-# Theater-Routes
-
-/api/theater
-         /create
-         /update
-         /get-theater/:theater_id
-         /get-all-theaters
-         /delete
-
-# Movie-Routes
-
-/api/movie
-
-
-
 {
-    "name": "Aashish Chanchalani",
-    "email": "Aashish@gmail.com",
-    "password":"Aashisht900",
-    "phone": "9834933992",
-    "role": "vendor",
-    "dateOfBirth": "2000-05-18"
-}
-
-{
-    "name": "Gaurav Kewat",
-    "email": "gauravkew121@gmail.com",
-    "password":"@@@kewatji@@@@",
-    "phone": "6266634065",
-    "role": "admin",
-    "dateOfBirth": "2000-02-11"
-}
-
-give me around 50 to 70 data about the theaters base on the cities which you provided to me these field is shown below and you must ensures that the city_id and owner_id are foreign keys in the Theaters table so put the city_id  from the above cities data city_id and for the owner_id the "id" of users which you provided me which has role only 'user' or 'vendor'   ---
-
-Table: Theaters
-
-Columns:
-	theater_id	int AI PK
-	name	varchar(255)
-	address	varchar(255)
-	city_id	int
-	owner_id	int
-	opening_time	time
-	closing_time	time
-
-
-    select m1.title,
-m2.theater_id,
-m2.price,
-m1.duration_time,
-s.screen_type,
-s.screen_no,
-Date_format( m2.start_time,'%h:%i %p') as start_time,
-  Date_format( DATE_ADD(m2.start_time,Interval m1.duration_time minute),'%h:%i %p') as endTime
-from Movies m1
-join MovieTheaters m2
-on m1.movie_id = m2.movie_id
-join Screens s 
-on m2.screen_id = s.screen_id
-
-
-
-seat_id : 1 to  650
-user_id : 1 to  202
-MT_id : 1 to  90
-
-Table: Seats
-
-
-Columns:
-
-	seat_id	int AI PK
-
-	seat_number	varchar(255)
-
-	createdAt	datetime
-
-	updatedAt	datetime
-
-	screen_id	int
-
-	seat_type	varchar(255)
-
-	price	float  
-
-
-where , price is seat_type wise platinum ,gold and silver so  platinum price > gold price > silver price
-
-
-
-
-1. Generate a report that shows the Top 5 movies that sold the highest number of tickets.
-Include movie name and total tickets sold.
-
-        select m.name,count(*) sold_tickets
-        from MovieTheaters mt
-        join Bookings b
-        on mt.MT_id = b.MT_id
-        join Movies m
-        on mt.movie_id = m.movie_id
-        where b.status = 'booked' and b.isDeleted =0 and mt.isDeleted =0 and m.isDeleted =0
-        group by m.movie_id 
-        order by sold_tickets desc
-        limit 5;
-
- await redisClient.setEx(`movie-${movie_id}`,60*2,JSON.stringify(movie));
-
-
-const cachedMovie = await redisClient.get(`movie-${movie_id}`);
-
-        if (cachedMovie) {
-            console.log('Data from Redis');
-            return  res.json(JSON.parse(cachedMovie));
+    "swagger": "2.0",
+    "info": {
+        "title": "Movie Booking API",
+        "description": "API documentation",
+        "version": "1.0.0"
+    },
+    "host": "localhost:5000",
+    "basePath": "/",
+    "schemes": [
+        "http"
+    ],
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "in": "header",
+            "name": "Authorization",
+            "description": "Enter JWT token: Bearer <token>"
         }
-
-
-2. Create a monthly revenue dashboard that shows how much money the platform earned each month from successful payments. The result should clearly display Year-Month and total
-revenue.
-
-
-select date_format(booking_time,'%Y-%M') as yearMonth , count(total_amount)as totalAmount
-from Bookings 
-where status = 'booked' and isDeleted = 0
-group by date_format(booking_time,'%Y-%M');
-
-
-
-
-3. Identify shows that are 90% or more booked. The result should include show time, movie
-name, theatre name, total seats, and booked seats.
-
-
-
-select m.name as movieName, ts.name as theater_name , mt.start_time as show_time ,total_seats,count(*) as booked ,count(booking_id)/total_seats
-from Bookings b 
-join MovieTheaters mt
-on mt.MT_id = b.MT_id 
-join Screens st
-on  st.screen_id = mt.screen_id
-join Theaters ts 
-on mt.theater_id = ts.theater_id
-join Movies m
-on mt.movie_id = m.movie_id
-where b.status = 'booked'
-group by mt.MT_id,ts.theater_id,st.screen_id,movieName,theater_name ,show_time,st.total_seats
-having count(*)/total_seats* 90 >= 90 ;
-
-
-
-
-
-4. Find users who have booked more than 3 tickets in total across all shows. Display user
-details and total tickets booked.
-
-
- select u.user_id, u.name,u.email,u.dateOfBirth,count(b.user_id)as booked_tickets
- from Bookings b 
- join Users u 
- on b.user_id = u.user_id 
- where b.isDeleted =0 and u.isDeleted =0 and status = 'booked'
- group by u.user_id , u.name, u.email, u.dateOfBirth 
- having count(b.user_id) > 3 ;
- 
- 
-
-
-5. Calculate total revenue generated by each theatre. Sort theatres from highest revenue to
-lowest.
-
-
- select mt.theater_id ,  sum(b.total_amount) as totalAmount 
- from MovieTheaters mt
- join Bookings b
- on b.MT_id = mt.MT_id 
- where b.status = 'booked' and mt.isDeleted = 0
- group by mt.theater_id
- order by totalAmount desc;
-
-
-
-6. Determine the most preferred seat type (Gold/Silver/Platinum) based on total tickets sold for
-each seat category.
-
-    select seat_type , count(*) as tickets 
-    from Bookings b 
-    join Seats s
-    on b.seat_id = s.seat_id
-    where b.isDeleted=0 and s.isDeleted=0 and b.status = 'booked'
-    group by s.seat_type
-    order by seat_type desc;
-    
-
-
-7. Find movies that have received an average rating above 4.0 and have at least 100 reviews.
-
-
-       
-     select m.movie_id , m.name
-     from Movies m
-	 join Feedbacks f
-     on m.movie_id = f.movie_id 
-     group by m.movie_id ,m.name,rating
-     having count(*) >=100 and avg(rating);
-
-
-
-
-
-8. Identify peak booking hours of the day based on booking timestamps.
-
-    
-     
-	select  date_format(booking_time,'%H') as hours ,count(date_format(booking_time,'%h')) usedHour
-    from  Bookings 
-    group by hours
-    order by usedHour desc;
-    
-
-9. Detect users who cancelled bookings more than twice.
-
-
-
-    select  u.user_id,u.name,u.email,status ,count(*) users 
-    from Users u
-    join Bookings b
-    on b.user_id = u.user_id
-    where b.status = 'cancelled'
-    group by u.user_id
-    having  count(u.user_id) >2;
-    
-    
-
-10. Create a city-wise revenue report showing which city generates the highest income
-
-
-    select mt.theater_id ,c.name city , sum(b.total_amount) as totalAmount
-    from MovieTheaters mt
-    join Theaters ts
-    on mt.theater_id = ts.theater_id
-    join Cities c
-    on c.city_id = ts.city_id
-    join Bookings b 
-	on b.MT_id = mt.MT_id 
-    where b.status = 'booked' and ts.isDeleted =0
-    group by mt.theater_id,c.city_id,c.name
-    order by totalAmount desc;
-    
-
-
-
-
-
- "paths": {
+    },
+    "paths": {
         "/api/auth/sign-up": {
             "post": {
                 "tags": [
@@ -994,6 +753,233 @@ each seat category.
                     }
                 }
             }
+        },
+        "/api/advanced/dashboard-movies": {
+            "get": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "/api/advanced/plateform-revenue": {
+            "get": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/advanced/shows-booked": {
+            "get": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/advanced/users-bookings": {
+            "get": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/advancedtheater-revenue": {
+            "get": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/advanced/most-prefered-seat": {
+            "get": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/advanced/average-ratings": {
+            "get": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/advanced/peak-booking-hours": {
+            "get": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/advanced/users-cancelled-bookings": {
+            "get": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/advanced/city-revenue": {
+            "get": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
         }
     }
-
+}
